env/main/manifest/argo_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: public-alb
    alb.ingress.kubernetes.io/subnets: dev-public-1, dev-public-2
    alb.ingress.kubernetes.io/group.name: shared-alb
  finalizers:
    - ingress.k8s.aws/resources
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
