env/main/manifest/kubernetes-dashboard-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-dashboard-proxy

  template:
    metadata:
      labels:
        app: kubernetes-dashboard-proxy

    spec:
      containers:
        - name: kubernetes-dashboard-proxy
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: kubernetes-dashboard-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-proxy
  namespace: kubernetes-dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: kubernetes-dashboard-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: internal-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /status/ready
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '2'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  rules:
    - host: eks-front-prod-dashboard.tidesquare.com
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
