env/main/manifest/test-app-nginx.yml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-app
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: spring-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: spring-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: spring-app
spec:
  selector:
    matchLabels:
      app: spring-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: spring-app
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: spring-app
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 80
